welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:3: error: '=' expected but ';' found.
  var position=-1;
                 ^